# robocup-home

./: .dockerignore  .env  .gitignore  .gitmodules  Dockerfile  Dockerfile.melodic  Dockerfile.noetic  Dockerfile.slim.melodic  Makefile  README.md  SystemDesignv3.drawio  Untitled Diagram.drawio  out.raw  ros_connect.bash
Commands/: Command.h  Commands.cbp  (+7 more)
catkin_home/src/manipulation/dashgo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
catkin_home/src/manipulation/dashgo_moveit_config/config/: DASHGO_controllers.yaml  controllers.yaml  dashgo.srdf  fake_controllers.yaml  gazebo_dashgo.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  paddings.yaml  sensors_3d.yaml  stomp_planning.yaml
catkin_home/src/manipulation/dashgo_moveit_config/launch/: chomp_planning_pipeline.launch.xml  dashgo_moveit_sensor_manager.launch.xml  dashgo_xarm.launch  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveitDashgoControllers.launch  moveit_rviz.launch  moveit_rviz_common.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  rvizManipulation.rviz  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  xarm6_moveit_controller_manager.launch.xml
catkin_home/src/manipulation/dashgo_moveit_config/scripts/: GetArmIk.py  MoveItBase.py  TestLinearVel.py  toggle_octomap.py
catkin_home/src/manipulation/dashgo_moveit_config/src/: MyController.cpp  OctomapInput.cpp
catkin_home/src/manipulation/pick_and_place/: CMakeLists.txt  package.xml
catkin_home/src/manipulation/pick_and_place/action/: PickAndPlace.action  manipulationServ.action
catkin_home/src/manipulation/pick_and_place/config/: all.rviz  dashgo_eigen_params.cfg  dashgo_eigen_params_SF.cfg  params_DASHGO.yaml  params_HSR.yaml  params_TIAGO.yaml  ros_eigen_params.cfg  tiago_eigen_params.cfg
catkin_home/src/manipulation/pick_and_place/launch/: manipulation.dashgo.launch  manipulation.dashgo.tmr2023.launch  manipulation.launch  manipulation.no2D.launch  pick.launch  test.launch
catkin_home/src/manipulation/pick_and_place/msg/: img.msg  img_list.msg
catkin_home/src/manipulation/pick_and_place/scripts/: FaceDetection.py  PlanningNode.py  PlanningServer.py  face_det&rec.py  getState.py  manipulationClient.py  manipulationServer.py  octomap_enable.py  pick_and_place_server.py  test_c.cpp  test_place.cpp
catkin_home/src/manipulation/pick_and_place/srv/: EnableOctomap.srv
catkin_home/src/manipulation/robot_moveit_config/: CMakeLists.txt  package.xml
catkin_home/src/manipulation/robot_moveit_config/config/: RBRGS_controllers.yaml  base_controller.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  padding.yaml  robot_description.srdf  ros_controllers.yaml
catkin_home/src/manipulation/robot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveitBaseController.launch  moveitRbrgsControllers.launch  ros_controllers.launch  sensor_manager.launch.xml
catkin_home/src/manipulation/robot_moveit_config/scripts/: MoveItBase.py
catkin_home/src/manipulation/robot_moveit_config/src/: MyRobot.cpp
catkin_home/src/navigation/map_visualizer/: CMakeLists.txt  map_display.launch  package.xml
catkin_home/src/navigation/map_visualizer/contextmaps/: Map3.json
catkin_home/src/navigation/map_visualizer/msg/: MapDisplayState.msg  Room.msg
catkin_home/src/navigation/map_visualizer/scripts/: goal_display.py  goal_saver.py  map.py  map_tagger.py  map_tagger_display.py
catkin_home/src/object_manipulation/: CMakeLists.txt  package.xml
catkin_home/src/object_manipulation/action/: PickUpPose.action
catkin_home/src/object_manipulation/cfg/: SphericalGrasp.cfg
catkin_home/src/object_manipulation/config/: pick_and_place_params.yaml  pick_motions.yaml
catkin_home/src/object_manipulation/include/: detect_cylinders_utils.py
catkin_home/src/object_manipulation/launch/: pick.launch
catkin_home/src/object_manipulation/scripts/: manipuationServer.py  manipulationClient.py  pick_and_place_server.py  spherical_grasps_server.py
catkin_home/src/robot_description/: CMakeLists.txt  package.xml
catkin_home/src/robot_description/launch/: display.dashgo.launch  display.launch  display.tiago.launch  gazebo.dashgo.launch  gazebo.launch  gazebo.tiago.launch
catkin_home/src/robot_description/meshes/: BASE PINZA.STL  BASE_PINZA.STL  Camara.STL  Cuello.STL  Garra_D.STL  Garra_I.STL  PINZA_DER.STL  PINZA_IZQ.STL  Pinza.STL
catkin_home/src/robot_description/meshes/Dashgo/: Base.STL  BaseBrazo.STL  BaseCollisionsSinPalo.stl  BaseSinPalo.stl  Base_Collisions_CamGripper.STL  Cam.STL  Cam1.STL  Cam1RevFix.STL  Cam2Rev.STL  Cam3.STL  DX-CUERPOV4.STL  Llanta1.STL  Llanta2.STL  LlantaLoca1.STL  LlantaLoca2.STL  Loca1.STL  Loca2.STL  RevCam1.STL  RevCam2.STL  cubierta.stl  cubierta_colliders.stl  dashgo_cubierta.stl  dashgo_cubierta_colliders.stl
catkin_home/src/robot_description/rviz/: mapping.rviz  urdf.dashgo.rviz  urdf.rviz
catkin_home/src/robot_description/scripts/: throttle.py
catkin_home/src/robot_description/src/: nexus_ros_force_based_move.cpp
catkin_home/src/robot_description/urdf/: Fix.txt  camera.urdf.xacro  dashgo.urdf  dashgo.urdf.xacro  gripper.urdf.xacro  gripperSF.urdf.xacro  robot.gazebo.xacro  robot.urdf.xacro  robot_description.urdf  robot_nav.gazebo.xacro  robot_nav.urdf.xacro  rosbot.urdf.xacro  tiago.urdf.xacro
catkin_home/src/robot_description_light/: CMakeLists.txt  package.xml
catkin_home/src/robot_description_light/launch/: display.dashgo.launch
catkin_home/src/robot_description_light/urdf/: dashgo.urdf.xacro
vizbox/: .gitignore  Dockerfile  backendbase.py  package.xml  rosbackend.py  server.py
vizbox/msg/: Story.msg
vizbox/static/scripts/: script.js
vizbox/templates/: challenge.html
(+1921 files in other folders)
