<?xml version="1.0"?>
<package format="2">
  <name>robot_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for robot_description</p>
    <p>This package contains configuration data, 3D models and launch files for robot_description robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
    <architecture_independent />
  </export>

</package>
